add main site content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Ysael Sáez - COMING SOON</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
 
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="logo">
+        <img src="assets/Online Brand Logo.svg" alt="Ysael Saez logo" />
+      </div>
+
+      <div class="card">
+        <h1>COMING SOON</h1>
+        <h2>Rebuilding my portfolio website</h2>
+
+        <p>Github | LinkedIn</p>
+      </div>
+    </div>
+
+    <script src="index.js"></script>
+  </body>
 </html>
