add social links logos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
         <h1>COMING SOON</h1>
         <h2>Rebuilding my portfolio website</h2>
 
-        <p>Github | LinkedIn</p>
+        <div class="social-link">
+          <img
+            src="assets/iconfinder_394187_github_icon.svg"
+            alt="github logo"
+          />
+          <img
+            src="assets/iconfinder_1964405_linkedin_logo_media_social_icon.svg"
+            alt="linkedin logo"
+          />
+        </div>
       </div>
     </div>
 
