add div to card texts

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
       </div>
 
       <div class="card">
-        <h1>COMING SOON</h1>
-        <h2>Rebuilding my portfolio website</h2>
+        <div class="card-text">
+          <h1>COMING SOON</h1>
+          <h2>Rebuilding my portfolio website</h2>
+        </div>
 
         <div class="social-links">
-            <!-- GitHub -->
+          <!-- GitHub -->
           <svg
             enable-background="new -1163 1657.697 56.693 56.693"
             id="Layer_1"
