--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="logo">
-        <img src="assets/Online Brand Logo.svg" alt="Ysael Saez logo" />
+        <img src="assets/Online Brand Logo (circle).svg" alt="Ysael Saez logo" />
       </div>
 
       <div class="card">
