--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <link rel="stylesheet" href="style.css" />
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
     <div class="container">
       <div class="logo">
-        <img src="assets/Online Brand Logo (circle).svg" alt="Ysael Saez logo" />
+        <img
+          src="assets/Online Brand Logo (circle).svg"
+          alt="Ysael Saez logo"
+        />
       </div>
 
       <div class="card">
