change page logo to png

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="logo">
         <img
-          src="assets/Online Brand Logo (circle).svg"
+          src="assets/Online Brand Logo (circle).png"
           alt="Ysael Saez logo"
         />
       </div>
