unstyle links and add ico for tab icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="assets/Online Brand Logo (circle).png">
+    <link
+      rel="icon"
+      href="assets/ysael saez logo.ico"
+      type="image/ico"
+    />
     <title>Ysael Sáez - COMING SOON</title>
 
     <link rel="stylesheet" href="style.css" />
@@ -22,10 +26,12 @@
   <body>
     <div class="container">
       <div class="logo">
-        <img
-          src="assets/Online Brand Logo (circle).png"
-          alt="Ysael Saez logo"
-        />
+        <a href="/">
+          <img
+            src="assets/Online Brand Logo (circle).png"
+            alt="Ysael Saez logo"
+          />
+        </a>
       </div>
 
       <div class="card">
@@ -36,9 +42,13 @@
 
         <div class="social-links">
           <!-- GitHub -->
-          <i class="fab fa-github"></i>
+          <a href="https://github.com/YO-SC" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
           <!-- LinkedIn -->
-          <i class="fab fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/ysael-saez/" target="_blank">
+            <i class="fab fa-linkedin"></i>
+          </a>
         </div>
       </div>
     </div>
