add some more comments

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <title>Ysael Sáez - COMING SOON</title>
 
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
 
     <!-- Font Awesome -->
@@ -53,6 +54,7 @@
       </div>
     </div>
 
+    <!-- JS -->
     <script src="index.js"></script>
   </body>
 </html>
