add metadescription tag for SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name='description' content='Hello, I am Ysael Sáez. I am a passionate web developer seeking to make you web development needs come true. Check out this website of mine to see what I have worked on; maybe we can work together too.'>
 
     <link
       rel="icon"
