--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name='description' content='Hello, I am Ysael Sáez. I am a passionate web developer seeking to make you web development needs come true.'>
-
-    <link
-      rel="icon"
-      href="assets/ysael saez logo.ico"
-      type="image/ico"
+    <meta
+      name="description"
+      content="Hello, I am Ysael Sáez. I am a passionate web developer seeking to make you web development needs come true."
     />
+
+    <link rel="icon" href="assets/ysael saez logo.ico" type="image/ico" />
     <title>Ysael Sáez - COMING SOON</title>
 
     <!-- CSS -->
@@ -53,6 +52,13 @@
           </a>
         </div>
       </div>
+
+      <a id="dog-easter" href="" target="_blank">
+        <div id="easter">
+          <i class="fas fa-dog"></i>
+          Show me a random cute dog
+        </div>
+      </a>
     </div>
 
     <!-- JS -->
