--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name='description' content='Hello, I am Ysael Sáez. I am a passionate web developer seeking to make you web development needs come true.'>
-
-    <link
-      rel="icon"
-      href="assets/ysael saez logo.ico"
-      type="image/ico"
+    <meta
+      name="description"
+      content="Hello, I am Ysael Sáez. I am a passionate web developer seeking to make you web development needs come true."
     />
+
+    <link rel="icon" href="assets/ysael saez logo.ico" type="image/ico" />
     <title>Ysael Sáez - COMING SOON</title>
 
     <!-- CSS -->
@@ -55,7 +54,11 @@
       </div>
     </div>
 
+    <!-- Particles JS -->
+    <div id="particles-js"></div>
+
     <!-- JS -->
+    <script src="particles.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
