add copyright notice

--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
         </div>
 
         <div class="social-links">
-          <a id="dog-easter" href="" target="_blank" title="You found the easter egg! Click to see a cute dog.">
-              <i class="fas fa-dog"></i>
+          <a
+            id="dog-easter"
+            href=""
+            target="_blank"
+            title="You found the easter egg! Click to see a cute dog."
+          >
+            <i class="fas fa-dog"></i>
           </a>
 
           <!-- GitHub -->
@@ -56,6 +61,10 @@
             <i class="fab fa-linkedin"></i>
           </a>
         </div>
+      </div>
+
+      <div id="copyright">
+        <p>Copyright &copy; 2021, Ysael Sáez Colón. All Rights Reserved.</p>
       </div>
     </div>
 
